--- a/COMP30027_2025_asst1.ipynb
+++ b/COMP30027_2025_asst1.ipynb
@@ -7,7 +7,7 @@
     "##### ### The University of Melbourne, School of Computing and Information Systems\n",
     "# COMP30027 Machine Learning, 2025 Semester 1\n",
     "\n",
-    "## Assignment 1: Scam detection with naive Bayes\n"
+    "## Assignment 1: Scam detection with Naive Bayes\n"
    ]
   },
   {
@@ -15,6 +15,53 @@
    "metadata": {},
    "source": [
     "**Student ID(s):**     1462539\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 0. Set-up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us load data from `sms_supervised_train.csv`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "# Load data\n",
+    "data = pd.read_csv('data/sms_supervised_train.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we loaded out data, let us delete rows where `textPreprocessed` is empty by calling `data.dropna`. These instances do not have any features we can learn from. We can then tokenise (split) the already preprossessd text for our next stage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split text into tokens\n",
+    "data.dropna(subset=['textPreprocessed'], inplace=True)\n",
+    "data['tokens'] = data['textPreprocessed'].apply(lambda x: x.split())"
    ]
   },
   {
@@ -94,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
