--- a/COMP30027_2025_asst1.ipynb
+++ b/COMP30027_2025_asst1.ipynb
@@ -33,14 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from typing import List, Set, Dict\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
+    "from typing import List, Set, Dict, Tuple\n",
     "\n",
     "# Load data\n",
     "labeled_train = pd.read_csv('data/sms_supervised_train.csv')"
@@ -55,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,14 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "vocabulary = set()\n",
     "for tokens in labeled_train['tokens']:\n",
-    "    vocabulary.update(tokens)\n",
-    "vocabulary = list(vocabulary)"
+    "    vocabulary.update(tokens)"
    ]
   },
   {
@@ -92,13 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "vectorizer: CountVectorizer = CountVectorizer(vocabulary=vocabulary)\n",
     "X: np.ndarray = vectorizer.transform(labeled_train['textPreprocessed'])\n",
-    "y = labeled_train['class'].values"
+    "y: np.ndarray = labeled_train['class'].values"
    ]
   },
   {
@@ -112,12 +114,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now computer the prior probability of each class $P(C)$. It returns a dictionary of class label with prior probabilities $C: P(C)$."
+    "We now computer the prior probability of each class $P(C)$. It returns a dictionary of class label with prior probabilities $\\{C: P(C)\\}$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,12 +182,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are ready to train our dataset, but before that, let us create function to out most probable words in each class and also "
+    "We are ready to train our dataset, but before that, let us create function to out most probable words in each class and also \n",
+    "\n",
+    "$$\n",
+    "\\text{Predictiveness} = \\frac{P(w \\mid \\text{scam})}{P(w \\mid \\text{non-malicious})}\n",
+    "$$\n",
+    "\n",
+    "The ratio tells us how \"words that happen a lot more in this group than the other one\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,163 +220,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prior probabilities:\n",
-      "Class 0 (non-malicious): 0.7995\n",
-      "Class 1 (scam): 0.2005\n",
-      "\n",
-      "Top 10 most probable words in non-malicious class:\n",
-      "go: 0.0161\n",
-      "get: 0.0143\n",
-      "gt: 0.0085\n",
-      "lt: 0.0084\n",
-      "call: 0.0083\n",
-      "ok: 0.0078\n",
-      "come: 0.0075\n",
-      "ur: 0.0075\n",
-      "know: 0.0075\n",
-      "good: 0.0071\n",
-      "\n",
-      "Top 10 most probable words in scam class:\n",
-      "call: 0.0274\n",
-      "free: 0.0137\n",
-      "claim: 0.0100\n",
-      "customer: 0.0092\n",
-      "txt: 0.0090\n",
-      "ur: 0.0085\n",
-      "text: 0.0082\n",
-      "stop: 0.0082\n",
-      "reply: 0.0080\n",
-      "mobile: 0.0078\n",
-      "\n",
-      "Top 10 most predictive words for scam class (P(w|1) / P(w|0)):\n",
-      "prize: 88.80\n",
-      "tone: 57.46\n",
-      "select: 41.79\n",
-      "claim: 41.21\n",
-      "50: 34.82\n",
-      "paytm: 33.08\n",
-      "code: 31.34\n",
-      "award: 28.73\n",
-      "won: 27.86\n",
-      "18: 26.12\n",
-      "\n",
-      "Top 10 most predictive words for non-malicious class (P(w|0) / P(w|1)):\n",
-      "gt: 60.30\n",
-      "lt: 59.73\n",
-      "lor: 32.16\n",
-      "hope: 27.57\n",
-      "ok: 27.57\n",
-      "da: 22.40\n",
-      "let: 20.10\n",
-      "wat: 19.53\n",
-      "oh: 18.38\n",
-      "lol: 17.80\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "priors = calc_prior(labeled_train)\n",
     "likelihoods = calc_likelihood(X, y)\n",
     "\n",
-    "\n",
-    "top_words_0 = get_top_words(likelihoods, vocabulary, 0)\n",
-    "top_words_1 = get_top_words(likelihoods, vocabulary, 1)\n",
-    "\n",
-    "top_predictive_1, top_predictive_0 = get_predictive_words(likelihoods, vocabulary)\n",
-    "\n",
-    "# --- Print results ---\n",
-    "print(\"Prior probabilities:\")\n",
-    "for c, p in priors.items():\n",
-    "    print(f\"Class {c} ({'scam' if c==1 else 'non-malicious'}): {p:.4f}\")\n",
-    "\n",
-    "print(\"\\nTop 10 most probable words in non-malicious class:\")\n",
-    "for word, prob in top_words_0:\n",
-    "    print(f\"{word}: {prob:.4f}\")\n",
-    "\n",
-    "print(\"\\nTop 10 most probable words in scam class:\")\n",
-    "for word, prob in top_words_1:\n",
-    "    print(f\"{word}: {prob:.4f}\")\n",
-    "\n",
-    "print(\"\\nTop 10 most predictive words for scam class (P(w|1) / P(w|0)):\")\n",
-    "for word, ratio in top_predictive_1:\n",
-    "    print(f\"{word}: {ratio:.2f}\")\n",
-    "\n",
-    "print(\"\\nTop 10 most predictive words for non-malicious class (P(w|0) / P(w|1)):\")\n",
-    "for word, ratio in top_predictive_0:\n",
-    "    print(f\"{word}: {ratio:.2f}\")\n"
+    "# print(\"Prior probabilities:\")\n",
+    "# for c, p in priors.items():\n",
+    "#     print(f\"Class {c} ({'scam' if c==1 else 'non-malicious'}): {p:.4f}\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$P(c | count) \\propto P(c)P(count|c)$$"
+    "print calculation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_prior(data: pd.DataFrame, label_col: str = 'class') -> pd.Series:\n",
-    "    \"\"\"Calculate P(class) for each class\"\"\"\n",
-    "    class_counts = data[label_col].value_counts()\n",
-    "    return class_counts / class_counts.sum()\n",
+    "top_words_0 = get_top_words(likelihoods, list(vocabulary), 0)\n",
+    "top_words_1 = get_top_words(likelihoods, list(vocabulary), 1)\n",
     "\n",
+    "# print(\"Top 10 most probable words in non-malicious class:\")\n",
+    "# for word, prob in top_words_0:\n",
+    "#     print(f\"{word}: {prob:.4f}\")\n",
     "\n",
-    "def calc_likelihood(X: np.ndarray, y: np.ndarray, alpha: float = 1.0) -> Dict[int, np.ndarray]:\n",
-    "    \"\"\"Calculate P(word|class) with Laplace smoothing\"\"\"\n",
-    "    classes = np.unique(y)\n",
-    "    vocab_size = X.shape[1]\n",
-    "    likelihoods = {}\n",
+    "# print(\"\\nTop 10 most probable words in scam class:\")\n",
+    "# for word, prob in top_words_1:\n",
+    "#     print(f\"{word}: {prob:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_predictive_1, top_predictive_0 = get_predictive_words(likelihoods, list(vocabulary))\n",
     "\n",
-    "    for c in classes:\n",
-    "        X_c = X[np.where(y == c)[0]]\n",
-    "        word_counts = X_c.sum(axis=0)\n",
-    "        word_counts = np.asarray(word_counts).flatten()\n",
-    "        total_count = word_counts.sum()\n",
-    "        likelihoods[c] = (word_counts + alpha) / (total_count + alpha * vocab_size)\n",
+    "# print(\"Top 10 most predictive words for scam class (P(w|1) / P(w|0)):\")\n",
+    "# for word, ratio in top_predictive_1:\n",
+    "#     print(f\"{word}: {ratio:.2f}\")\n",
     "\n",
-    "    return likelihoods\n",
-    "\n",
-    "\n",
-    "def calc_posterior(counts: np.ndarray, priors: Dict[int, float], likelihoods: Dict[int, np.ndarray]) -> Dict[int, float]:\n",
-    "    \"\"\"Calculate log-posterior score for each class\"\"\"\n",
-    "    scores = {}\n",
-    "    for c in priors:\n",
-    "        log_prior = np.log(priors[c])\n",
-    "        log_likelihood = np.log(likelihoods[c])\n",
-    "        scores[c] = log_prior + np.dot(counts, log_likelihood)\n",
-    "    return scores\n",
-    "\n",
-    "\n",
-    "def predict_NB(text: str, priors: Dict[int, float], likelihoods: Dict[int, np.ndarray], vectorizer: CountVectorizer) -> int:\n",
-    "    \"\"\"Predict class for one message using trained NB model\"\"\"\n",
-    "    counts = vectorizer.transform([text]).toarray().flatten()\n",
-    "    scores = calc_posterior(counts, priors, likelihoods)\n",
-    "    return max(scores, key=scores.get)\n",
-    "\n",
-    "\n",
-    "def train_NB(data: pd.DataFrame, text_col: str = 'textPreprocessed', label_col: str = 'class', alpha: float = 1.0):\n",
-    "    \"\"\"\n",
-    "    Trains a multinomial NB model on preprocessed SMS data.\n",
-    "    Returns: (priors, likelihoods, fitted_vectorizer)\n",
-    "    \"\"\"\n",
-    "    data = data.dropna(subset=[text_col])\n",
-    "    vectorizer = CountVectorizer()\n",
-    "    X = vectorizer.fit_transform(data[text_col])\n",
-    "    y = data[label_col].values\n",
-    "    priors = calc_prior(data, label_col)\n",
-    "    likelihoods = calc_likelihood(X, y, alpha)\n",
-    "    return priors, likelihoods, vectorizer\n"
+    "# print(\"\\nTop 10 most predictive words for non-malicious class (P(w|0) / P(w|1)):\")\n",
+    "# for word, ratio in top_predictive_0:\n",
+    "#     print(f\"{word}: {ratio:.2f}\")"
    ]
   },
   {
@@ -379,13 +282,170 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$P(c \\mid count) \\propto P(c)P(count \\mid c)$$\n",
+    "$$\\log{P(c \\mid doc)} \\propto \\log{P(c)} + \\sum_{i}{x_i \\cdot \\log{P(w_i \\mid c)}}$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def calc_posterior(counts: np.ndarray, priors: Dict[int, float], likelihoods: Dict[int, np.ndarray]) -> Dict[int, float]:\n",
+    "    \"\"\"Calculate log-posterior score for each class\"\"\"\n",
+    "    scores = {}\n",
+    "    for c in priors:\n",
+    "        log_prior = np.log(priors[c])\n",
+    "        log_likelihood = np.log(likelihoods[c])\n",
+    "        scores[c] = log_prior + np.dot(counts, log_likelihood)\n",
+    "    return scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_batch(texts: List[str], priors: Dict[int, float], likelihoods: Dict[int, np.ndarray], \n",
+    "                  vectorizer: CountVectorizer) -> Tuple[np.ndarray, np.ndarray]:\n",
+    "    predictions: List[int] = []\n",
+    "    confidence_ratios: List[float] = []\n",
+    "\n",
+    "    for text in texts:\n",
+    "        # Transform the text into a count vector\n",
+    "        counts: np.ndarray = vectorizer.transform([text]).toarray().flatten()\n",
+    "        # Calculate posterior scores for each class\n",
+    "        scores: Dict[int, float] = calc_posterior(counts, priors, likelihoods)\n",
+    "        # Append the predicted class (class with the highest posterior score)\n",
+    "        predictions.append(max(scores, key=scores.get))\n",
+    "        # Append the confidence ratio (P(class 1) / P(class 0))\n",
+    "        confidence_ratios.append(np.exp(scores[1] - scores[0]))\n",
+    "\n",
+    "    return np.array(predictions), np.array(confidence_ratios)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now, we calculate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = pd.read_csv('data/sms_test.csv')\n",
+    "test_df.dropna(subset=['textPreprocessed'], inplace=True)\n",
+    "\n",
+    "test_texts = test_df['textPreprocessed'].tolist()\n",
+    "true_labels = test_df['class'].values\n",
+    "predicted_labels, confidence_ratios = predict_batch(test_texts, priors, likelihoods, vectorizer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ill just use `sklearn` library to evaluate my NB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc = accuracy_score(true_labels, predicted_labels)\n",
+    "prec = precision_score(true_labels, predicted_labels)\n",
+    "rec = recall_score(true_labels, predicted_labels)\n",
+    "f1 = f1_score(true_labels, predicted_labels)\n",
+    "conf_matrix = confusion_matrix(true_labels, predicted_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(f\"Accuracy:  {acc:.4f}\")\n",
+    "# print(f\"Precision: {prec:.4f}\")\n",
+    "# print(f\"Recall:    {rec:.4f}\")\n",
+    "# print(f\"F1 Score:  {f1:.4f}\")\n",
+    "# print(\"\\nConfusion Matrix:\")\n",
+    "\n",
+    "# # Plot it\n",
+    "# plt.figure(figsize=(6, 5))\n",
+    "# sns.heatmap(conf_matrix, annot=True, fmt='d', cmap='Blues',\n",
+    "#             xticklabels=[\"Non-Malicious\", \"Scam\"],\n",
+    "#             yticklabels=[\"Non-Malicious\", \"Scam\"])\n",
+    "# plt.xlabel(\"Predicted Label\")\n",
+    "# plt.ylabel(\"True Label\")\n",
+    "# plt.tight_layout()\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OOV Messages (some tokens missing): 142\n",
+      "Skipped Messages (no tokens in vocab): 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "oov_messages = 0\n",
+    "skipped_messages = 0\n",
+    "\n",
+    "for text in test_texts:\n",
+    "    tokens = text.split()\n",
+    "    tokens_in_vocab = [token for token in tokens if token in vocabulary]\n",
+    "    if not tokens_in_vocab:\n",
+    "        skipped_messages += 1\n",
+    "    elif len(tokens) != len(tokens_in_vocab):\n",
+    "        oov_messages += 1\n",
+    "\n",
+    "print(f\"OOV Messages (some tokens missing): {oov_messages}\")\n",
+    "print(f\"Skipped Messages (no tokens in vocab): {skipped_messages}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df['prediction'] = predicted_labels\n",
+    "test_df['confidence_ratio'] = confidence_ratios\n",
+    "\n",
+    "# print(\"--- High Confidence Scam Predictions ---\")\n",
+    "# high_conf_scam = test_df[test_df['prediction'] == 1].sort_values(by='confidence_ratio', ascending=False).head(3)\n",
+    "# print(high_conf_scam[['textPreprocessed', 'confidence_ratio']])\n",
+    "\n",
+    "# print(\"\\n--- High Confidence Non-Malicious Predictions ---\")\n",
+    "# high_conf_nonmal = test_df[test_df['prediction'] == 0].sort_values(by='confidence_ratio', ascending=True).head(5)\n",
+    "# print(high_conf_nonmal[['textPreprocessed', 'confidence_ratio']])\n",
+    "\n",
+    "# print(\"\\n--- Boundary Cases (Confidence Ratio ≈ 1) ---\")\n",
+    "# boundary = test_df[(test_df['confidence_ratio'] > 0.9) & (test_df['confidence_ratio'] < 1.1)].head(3)\n",
+    "# print(boundary[['textPreprocessed', 'confidence_ratio']])"
+   ]
   },
   {
    "cell_type": "markdown",
